[gd_scene load_steps=2 format=3 uid="uid://dsxrcids74et8"]

[ext_resource type="Script" path="res://54c.gd" id="1_hrn1l"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrn1l")

[node name="ResultLBL" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 226.0
offset_right = 938.0
offset_bottom = 459.0
theme_override_font_sizes/font_size = 64
vertical_alignment = 1

[node name="ResultLBL2" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 24.0
offset_right = 938.0
offset_bottom = 257.0
theme_override_font_sizes/font_size = 64
vertical_alignment = 1

[node name="CalcBTN" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 542.0
offset_right = 310.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 32
text = "Calc"

[node name="ExitBTN" type="Button" parent="."]
layout_mode = 0
offset_left = 638.0
offset_top = 542.0
offset_right = 938.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="ClearBTN" type="Button" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 542.0
offset_right = 624.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 32
text = "Clear"

[node name="RadiusLE" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 464.0
offset_right = 310.0
offset_bottom = 539.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Radius"

[connection signal="pressed" from="CalcBTN" to="." method="_on_calc_btn_pressed"]
[connection signal="pressed" from="ExitBTN" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="ClearBTN" to="." method="_on_clear_btn_pressed"]
